--- a/cmake-init/templates/c/shared/CMakeLists.txt
+++ b/cmake-init/templates/c/shared/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.14)
+cmake_minimum_required(VERSION 3.{% if cmake_321 %}21{% else %}14{% end %})
 
 include(cmake/prelude.cmake)
 
@@ -9,8 +9,8 @@ project(
     HOMEPAGE_URL "{= homepage =}"
     LANGUAGES C
 )
-
-include(cmake/project-is-top-level.cmake)
+{% if not cmake_321 %}
+include(cmake/project-is-top-level.cmake){% end %}
 include(cmake/variables.cmake)
 
 # ---- Declare library ----
