--- a/cmake-init/templates/executable/CMakeLists.txt
+++ b/cmake-init/templates/executable/CMakeLists.txt
@@ -23,7 +23,7 @@ add_library(
 target_include_directories(
     {= name =}_lib ${warning_guard}
     PUBLIC
-    "$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
+    "\$<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/source>"
 )
 
 target_compile_features({= name =}_lib PUBLIC cxx_std_{= std =}){% if pm %}
