--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -126,8 +126,10 @@ jobs:
           detect_stack_use_after_return=1:\
           check_initialization_order=1:\
           strict_init_order=1:\
-          detect_leaks=1"
-        UBSAN_OPTIONS: print_stacktrace=1
+          detect_leaks=1:\
+          halt_on_error=1"
+        UBSAN_OPTIONS: "print_stacktrace=1:\
+          halt_on_error=1"
       run: ctest --output-on-failure --no-tests=error -j 2
 
   test:
