Add write permission to the `docs` CI job
For a job to be able to push to the repository, the token must have
write permissions.

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -225,6 +225,9 @@ jobs:
       && github.repository_owner == '<name>'
       && false
 
+    permissons:
+      contents: write
+
     steps:
     - uses: actions/checkout@v4
 
