Fix typo in CI workflow

--- a/cmake-init/templates/common/.github/workflows/ci.yml
+++ b/cmake-init/templates/common/.github/workflows/ci.yml
@@ -225,7 +225,7 @@ jobs:
       && github.repository_owner == '<name>'
       && false
 
-    permissons:
+    permissions:
       contents: write
 
     steps:
